--- a/demo/index.html
+++ b/demo/index.html
@@ -5,23 +5,107 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>SimpleDropit - Drag & Drop File upload Plugin</title>
-    <link rel="stylesheet" type="text/css" href="d85c5f8f3b3ab6de7344.css">
-    <link rel="stylesheet" type="text/css" href="47cbf42c350676c4cf5c.css">
-<script defer="defer" src="bundle.js"></script></head>
-<body>
+<script defer="defer" src="main.d81fde931ffeb8a29806.bundle.js"></script><link href="main.fa86ee8cce10ec1201de.css" rel="stylesheet"></head>
+<body class="py-4 bg-light">
     <div class="container">
-        <input type="file" name="files[]" class="sdnd-fileinput" id="sdd-fileinput1" multiple="multiple">
-        <div style="margin-top: 20px;"></div>
-        <div class="sdd-input-file-box">
-            <div class="sdd-input-file-box-wrapper">
-                <div class="sdd-input-file-label">
-                    <span class="sdd-box-dragndrop">Drag &amp; Drop file or&nbsp;</span>
-                    <span class="sdd-box-file-name"></span>
-                    <label class="sdd-label">Browse <span class="sdd-box-browse-file">File</span></label>
-                    <input type="file" name="files[]" class="sdnd-fileinput" id="sdd-fileinput2" multiple="multiple">
+        <main>
+            <div class="text-center">
+                <h1>SimpleDropit</h1>
+                <p class="lead">A simple drag-n-drop file upload vanilla js library, easy to use across modern browsers.</p>
+                <div class="mb-3">
+                    <input type="file" name="files[]" class="sd-fileinput" id="sd-fileInput" multiple="multiple">
                 </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-md-4 col-lg-3">
+                    <aside class="sd-aside pt-4 sticky-xl-top">
+                        <ul class="list-unstyled ps-0">
+                            <li class="mb-1"><a href="#usage" class="btn btn-toggle align-items-center rounded">Usage</a></li>
+                            <li class="mb-1"><a href="#example" class="btn btn-toggle align-items-center rounded">Example</a></li>
+                            <li class="mb-1"><a href="#browser-compatibility" class="btn btn-toggle align-items-center rounded">Browser Compatibility</a></li>
+                        </ul>
+                    </aside>
+                </div>
+                <div class="col-md-8 col-lg-9">
+                    <div id="usage">
+                        <h3 class="mt-4 sd-s-title">Usage<a href="#usage" class="ps-2 link-secondary card-link"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-link" viewBox="0 0 16 16">
+                            <path d="M6.354 5.5H4a3 3 0 0 0 0 6h3a3 3 0 0 0 2.83-4H9c-.086 0-.17.01-.25.031A2 2 0 0 1 7 10.5H4a2 2 0 1 1 0-4h1.535c.218-.376.495-.714.82-1z"/>
+                            <path d="M9 5.5a3 3 0 0 0-2.83 4h1.098A2 2 0 0 1 9 6.5h3a2 2 0 1 1 0 4h-1.535a4.02 4.02 0 0 1-.82 1H12a3 3 0 1 0 0-6H9z"/>
+                          </svg></a></h3>
+                        <p>You can install SimpleDropit plugin by including the following stylesheet and javascript:</p>
+                        <pre class="sd-code-snippets"><code class="html">&lt;link rel="stylesheet" href="dist/css/simpledropit.min.css"&gt;
+&lt;script src="dist/js/simpledropit.min.js">&lt;/script&gt;</code></pre>
+                    </div>
+                    <div id="example">
+                        <h3 class="mt-4 sd-s-title">Example<a href="#example" class="ps-2 link-secondary card-link"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-link" viewBox="0 0 16 16">
+                            <path d="M6.354 5.5H4a3 3 0 0 0 0 6h3a3 3 0 0 0 2.83-4H9c-.086 0-.17.01-.25.031A2 2 0 0 1 7 10.5H4a2 2 0 1 1 0-4h1.535c.218-.376.495-.714.82-1z"/>
+                            <path d="M9 5.5a3 3 0 0 0-2.83 4h1.098A2 2 0 0 1 9 6.5h3a2 2 0 1 1 0 4h-1.535a4.02 4.02 0 0 1-.82 1H12a3 3 0 1 0 0-6H9z"/>
+                          </svg></a></h3>
+                        <p>Just call <code>new SimpleDropit(ELEMENT)</code> on the file-select input element.</p>
+                        <p>Your input field will be</p>
+                        <pre class="sd-code-snippets"><code class="html">&lt;input type="file" name="files[]" id="myInput" multiple&gt;</code></pre>
+                        <p>And you start SimpleDropit manually:</p>
+                        <pre class="sd-code-snippets"><code class="js">new SimpleDropit(document.getElementById('myInput'));</code></pre>
+                        <div class="mb-3">
+                            <input type="file" name="files[]" class="sd-fileinput" id="myInput" multiple="multiple">
+                        </div>
+                        <p>Your input field html structure will be similar to this:</p>
+                        <pre class="sd-code-snippets"><button class="btn btn-outline-secondary btn-copy sd-btn-copy btn-sm" type="button">Copy</button><code class="html">&lt;div class="sd-box"&gt;
+    &lt;div class="sd-box-wrapper"&gt;
+        &lt;div class="sd-label"&gt;
+            &lt;span class="sd-box-dragndrop"&gt;Drop file here /&nbsp;&lt;/span&gt;
+            &lt;span class="sd-box-file-name"&gt;&lt;/span&gt;
+            &lt;label class="sd-label"&gt;Browse &lt;span class="sd-box-browse-file"&gt;File&lt;/span&gt;&lt;/label&gt;
+            &lt;input type="file" name="files[]" id="myInput" multiple&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+&lt;/div&gt;</code></pre>
+                        <p>You can also use the html structure in your code and call SimpleDropit.</p>
+                        <pre class="sd-code-snippets"><code class="html">&lt;div class="sd-box"&gt;
+    &lt;div class="sd-box-wrapper"&gt;
+        &lt;div class="sd-label"&gt;
+            &lt;span class="sd-box-dragndrop"&gt;Drop file here /&nbsp;&lt;/span&gt;
+            &lt;span class="sd-box-file-name"&gt;&lt;/span&gt;
+            &lt;label class="sd-label"&gt;Browse &lt;span class="sd-box-browse-file"&gt;File&lt;/span&gt;&lt;/label&gt;
+            &lt;input type="file" name="files[]" id="myInput2" multiple&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
+
+&lt;script type="text/javascript"&gt;
+    new SimpleDropit(document.getElementById('myInput2'));
+&lt;/script&gt;
+</code></pre>
+                        <div class="mb-3">
+                            <div class="sd-box">
+                                <div class="sd-box-wrapper">
+                                    <div class="sd-label">
+                                        <span class="sd-box-dragndrop">Drop file here /&nbsp;</span>
+                                        <span class="sd-box-file-name"></span>
+                                        <label class="sd-label">Browse <span class="sd-box-browse-file">File</span></label>
+                                        <input type="file" name="files[]" id="myInput2" multiple="multiple">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <p>If you want to use jQuery:</p>
+                        <pre class="sd-code-snippets"><code class="js">new SimpleDropit($('#myInput')[0]);</code></pre>
+                        <hr class="my-4 bg-secondary">
+                    </div>
+                    <div id="browser-compatibility">
+                        <h3 class="sd-s-title">Browser Compatibility<a href="#browser-compatibility" class="ps-2 link-secondary card-link"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-link" viewBox="0 0 16 16">
+                            <path d="M6.354 5.5H4a3 3 0 0 0 0 6h3a3 3 0 0 0 2.83-4H9c-.086 0-.17.01-.25.031A2 2 0 0 1 7 10.5H4a2 2 0 1 1 0-4h1.535c.218-.376.495-.714.82-1z"/>
+                            <path d="M9 5.5a3 3 0 0 0-2.83 4h1.098A2 2 0 0 1 9 6.5h3a2 2 0 1 1 0 4h-1.535a4.02 4.02 0 0 1-.82 1H12a3 3 0 1 0 0-6H9z"/>
+                        </svg></a></h3>
+                        <p>SimpleDropit works in all modern browsers.</p>
+                        <hr class="my-4 bg-secondary">
+                        <h3 sd-s-title>Author</h3>
+                        <p class="lead fw-normal">Nish K - <a href="https://github.com/nishantk02" target="_blank">GitHub</a> / <a href="https://twitter.com/nishdcoder" target="_blank">Twitter</a></p>
+                        <p class="copyright">&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 </html>
