--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://nishantk02.github.io/SimpleDropit/demo/">
+    <meta http-equiv="refresh" content="0; url=/demo/">
     <title>SimpleDropit - Drag & Drop File upload Plugin</title>
 </head>
 <body>
