--- a/website/index.html
+++ b/website/index.html
@@ -53,7 +53,7 @@
                         <pre class="sd-code-snippets"><button class="btn btn-outline-secondary btn-copy sd-btn-copy btn-sm" type="button">Copy</button><code class="html">&lt;div class="sd-box"&gt;
     &lt;div class="sd-box-wrapper"&gt;
         &lt;div class="sd-label"&gt;
-            &lt;span class="sd-box-dragndrop"&gt;Drag &amp; Drop file or&nbsp;&lt;/span&gt;
+            &lt;span class="sd-box-dragndrop"&gt;Drop file here /&nbsp;&lt;/span&gt;
             &lt;span class="sd-box-file-name"&gt;&lt;/span&gt;
             &lt;label class="sd-label"&gt;Browse &lt;span class="sd-box-browse-file"&gt;File&lt;/span&gt;&lt;/label&gt;
             &lt;input type="file" name="files[]" id="myInput" multiple&gt;
@@ -64,7 +64,7 @@
                         <pre class="sd-code-snippets"><code class="html">&lt;div class="sd-box"&gt;
     &lt;div class="sd-box-wrapper"&gt;
         &lt;div class="sd-label"&gt;
-            &lt;span class="sd-box-dragndrop"&gt;Drag &amp; Drop file or&nbsp;&lt;/span&gt;
+            &lt;span class="sd-box-dragndrop"&gt;Drop file here /&nbsp;&lt;/span&gt;
             &lt;span class="sd-box-file-name"&gt;&lt;/span&gt;
             &lt;label class="sd-label"&gt;Browse &lt;span class="sd-box-browse-file"&gt;File&lt;/span&gt;&lt;/label&gt;
             &lt;input type="file" name="files[]" id="myInput2" multiple&gt;
@@ -80,7 +80,7 @@
                             <div class="sd-box">
                                 <div class="sd-box-wrapper">
                                     <div class="sd-label">
-                                        <span class="sd-box-dragndrop">Drag &amp; Drop file or&nbsp;</span>
+                                        <span class="sd-box-dragndrop">Drop file here /&nbsp;</span>
                                         <span class="sd-box-file-name"></span>
                                         <label class="sd-label">Browse <span class="sd-box-browse-file">File</span></label>
                                         <input type="file" name="files[]" id="myInput2" multiple>
