fix: oops update classname

--- a/website/index.html
+++ b/website/index.html
@@ -56,7 +56,7 @@
                             <p>Your input field html structure will be similar to this:</p>
                             <pre class="sd-code-snippets"><code class="html">&lt;div class="sd-box"&gt;
     &lt;div class="sd-box-wrapper"&gt;
-        &lt;div class="sd-label"&gt;
+        &lt;div class="sd-label-wrapper"&gt;
             &lt;span class="sd-box-dragndrop"&gt;Drop file here /&nbsp;&lt;/span&gt;
             &lt;span class="sd-box-file-name"&gt;&lt;/span&gt;
             &lt;label class="sd-label"&gt;Browse &lt;span class="sd-box-browse-file"&gt;File&lt;/span&gt;&lt;/label&gt;
@@ -67,7 +67,7 @@
                             <p>You can also use the html structure in your code and call SimpleDropit.</p>
                             <pre class="sd-code-snippets"><code class="html">&lt;div class="sd-box"&gt;
     &lt;div class="sd-box-wrapper"&gt;
-        &lt;div class="sd-label"&gt;
+        &lt;div class="sd-label-wrapper"&gt;
             &lt;span class="sd-box-dragndrop"&gt;Drop file here /&nbsp;&lt;/span&gt;
             &lt;span class="sd-box-file-name"&gt;&lt;/span&gt;
             &lt;label class="sd-label"&gt;Browse &lt;span class="sd-box-browse-file"&gt;File&lt;/span&gt;&lt;/label&gt;
