--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>SimpleDropit - Drag & Drop File upload Plugin</title>
-<script defer="defer" src="main.845dd52ceca4eab6c08b.bundle.js"></script><link href="main.7e370c55a6951032c4ef.css" rel="stylesheet"></head>
+<script defer="defer" src="main.89182cefbded3c075bc2.bundle.js"></script><link href="main.31c8632a6876eab6bab6.css" rel="stylesheet"></head>
 <body class="py-4 bg-light">
     <div class="container">
         <main>
@@ -56,7 +56,7 @@
                             <p>Your input field html structure will be similar to this:</p>
                             <pre class="sd-code-snippets"><code class="html">&lt;div class="sd-box"&gt;
     &lt;div class="sd-box-wrapper"&gt;
-        &lt;div class="sd-label"&gt;
+        &lt;div class="sd-label-wrapper"&gt;
             &lt;span class="sd-box-dragndrop"&gt;Drop file here /&nbsp;&lt;/span&gt;
             &lt;span class="sd-box-file-name"&gt;&lt;/span&gt;
             &lt;label class="sd-label"&gt;Browse &lt;span class="sd-box-browse-file"&gt;File&lt;/span&gt;&lt;/label&gt;
@@ -67,7 +67,7 @@
                             <p>You can also use the html structure in your code and call SimpleDropit.</p>
                             <pre class="sd-code-snippets"><code class="html">&lt;div class="sd-box"&gt;
     &lt;div class="sd-box-wrapper"&gt;
-        &lt;div class="sd-label"&gt;
+        &lt;div class="sd-label-wrapper"&gt;
             &lt;span class="sd-box-dragndrop"&gt;Drop file here /&nbsp;&lt;/span&gt;
             &lt;span class="sd-box-file-name"&gt;&lt;/span&gt;
             &lt;label class="sd-label"&gt;Browse &lt;span class="sd-box-browse-file"&gt;File&lt;/span&gt;&lt;/label&gt;
