--- a/demo/index.html
+++ b/demo/index.html
@@ -83,7 +83,7 @@
                             <div class="mb-3">
                                 <div class="sd-box">
                                     <div class="sd-box-wrapper">
-                                        <div class="sd-label">
+                                        <div class="sd-label-wrapper">
                                             <span class="sd-box-dragndrop">Drop file here /&nbsp;</span>
                                             <span class="sd-box-file-name"></span>
                                             <label class="sd-label">Browse <span class="sd-box-browse-file">File</span></label>
